redis interface info cache
