# docs/swagger.json
@@ -50,6 +50,50 @@
                 }
             }
         },
+        "/admin/interface/delete/{id}": {
+            "get": {
+                "description": "Delete interface information by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Interface information"
+                ],
+                "summary": "Delete interface information by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/middlewares.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "schema": {
+                            "$ref": "#/definitions/middlewares.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/middlewares.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/interface/update": {
             "post": {
                 "description": "Update interface information",
@@ -96,9 +140,55 @@
                 }
             }
         },
+        "/admin/invoke_info/status": {
+            "post": {
+                "description": "Get invoke information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Invoke"
+                ],
+                "summary": "Get invoke information",
+                "parameters": [
+                    {
+                        "description": "invoke request",
+                        "name": "invokeRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GetInvokeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/middlewares.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "schema": {
+                            "$ref": "#/definitions/middlewares.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/middlewares.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/user/delete/{id}": {
             "get": {
-                "description": "Get user by name",
+                "description": "Get user by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -108,7 +198,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Get user by name",
+                "summary": "Get user by id",
                 "parameters": [
                     {
                         "type": "string",
@@ -281,7 +371,7 @@
         },
         "/api/interface_info/get_info/{id}": {
             "get": {
-                "description": "Delete interface information by id",
+                "description": "Get interface information by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -291,7 +381,7 @@
                 "tags": [
                     "Interface information"
                 ],
-                "summary": "Delete interface information by id",
+                "summary": "Get interface information by id",
                 "parameters": [
                     {
                         "type": "string",
@@ -529,8 +619,7 @@
             "required": [
                 "method",
                 "status",
-                "url",
-                "user_id"
+                "url"
             ],
             "properties": {
                 "description": {
@@ -540,7 +629,14 @@
                 },
                 "method": {
                     "description": "请求类型",
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 256,
+                    "enum": [
+                        "GET",
+                        "POST",
+                        "PUT",
+                        "DELETE"
+                    ]
                 },
                 "name": {
                     "description": "名称",
@@ -559,11 +655,17 @@
                 },
                 "status": {
                     "description": "接口状态(0-关闭， 1-开启)",
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 10,
+                    "enum": [
+                        0,
+                        1
+                    ]
                 },
                 "url": {
                     "description": "接口地址",
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 512
                 },
                 "user_id": {
                     "description": "创建人",
@@ -583,9 +685,34 @@
                     "maxLength": 1024
                 },
                 "user_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 256
                 },
                 "user_password": {
+                    "type": "string",
+                    "maxLength": 256
+                }
+            }
+        },
+        "models.GetInvokeRequest": {
+            "type": "object",
+            "required": [
+                "method",
+                "path"
+            ],
+            "properties": {
+                "method": {
+                    "description": "请求类型",
+                    "type": "string",
+                    "enum": [
+                        "GET",
+                        "POST",
+                        "PUT",
+                        "DELETE"
+                    ]
+                },
+                "path": {
+                    "description": "接口地址",
                     "type": "string"
                 }
             }
@@ -633,10 +760,20 @@
         },
         "models.InvokeRequest": {
             "type": "object",
+            "required": [
+                "method",
+                "url"
+            ],
             "properties": {
                 "method": {
                     "description": "请求类型",
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "GET",
+                        "POST",
+                        "PUT",
+                        "DELETE"
+                    ]
                 },
                 "url": {
                     "description": "接口地址",
@@ -652,10 +789,12 @@
             ],
             "properties": {
                 "user_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 256
                 },
                 "user_password": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 256
                 }
             }
         },
@@ -667,10 +806,12 @@
             ],
             "properties": {
                 "page": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 256
                 },
                 "page_size": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 64
                 }
             }
         },
@@ -682,10 +823,12 @@
             ],
             "properties": {
                 "page": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 256
                 },
                 "page_size": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 64
                 }
             }
         },
@@ -735,8 +878,7 @@
                 },
                 "user_id": {
                     "description": "创建人",
-                    "type": "integer",
-                    "maximum": 64
+                    "type": "integer"
                 }
             }
         },
@@ -754,7 +896,8 @@
                     "type": "integer"
                 },
                 "user_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 256
                 },
                 "user_password": {
                     "type": "string",
